@@ -1195,7 +1195,8 @@ nuttx-0.3.18 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
           into very small memory footprints.
 	* Added a block to character (BCH) driver.  This is kind of the reverse of the loop
 	  device; it allows you access a block device like a character device.
-	* NSH: Added 'dd' command
+	* NSH: Added the 'dd' command
+	* NSH: Added the 'losetup' command
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
