@@ -328,6 +328,19 @@ o ifconfig
   if uIP statistics are enabled (CONFIG_NET_STATISTICS), then
   this command will also show the detailed state of uIP.
 
+o losetup [-d <dev-path>] | [[-o <offset>] [-r] <ldev-path> <file-path>]
+
+  Setup or teardown the loop device:
+
+  1. Teardown the setup for the loop device at <dev-path>:
+
+    losetup d <dev-path>
+
+  2. Setup the loop device at <dev-path> to access the file at <file-path>
+     as a block device:
+
+    losetup [-o <offset>] [-r] <dev-path> <file-path>
+
 o ls [-lRs] <dir-path>
 
   Show the contents of the directory at <dir-path>.  NOTE:
@@ -721,6 +734,7 @@ Command Dependencies on Configuration Settings
   get        CONFIG_NET && CONFIG_NET_UDP && CONFIG_NFILE_DESCRIPTORS > 0 && CONFIG_NET_BUFSIZE >= 558  (see note 1)
   help       --
   ifconfig   CONFIG_NET
+  losetup    !CONFIG_DISABLE_MOUNTPOINT && CONFIG_NFILE_DESCRIPTORS > 0
   ls         CONFIG_NFILE_DESCRIPTORS > 0
   mb,mh,mw   ---
   mem        ---
@@ -762,15 +776,15 @@ also allow it to squeeze into very small memory footprints.
   CONFIG_EXAMPLES_NSH_DISABLE_CAT,      CONFIG_EXAMPLES_NSH_DISABLE_CD,      CONFIG_EXAMPLES_NSH_DISABLE_CP,
   CONFIG_EXAMPLES_NSH_DISABLE_DD,       CONFIG_EXAMPLES_NSH_DISABLE_ECHO,    CONFIG_EXAMPLES_NSH_DISABLE_EXEC,
   CONFIG_EXAMPLES_NSH_DISABLE_EXIT,     CONFIG_EXAMPLES_NSH_DISABLE_GET,     CONFIG_EXAMPLES_NSH_DISABLE_HELP,
-  CONFIG_EXAMPLES_NSH_DISABLE_IFCONFIG, CONFIG_EXAMPLES_NSH_DISABLE_LS,      CONFIG_EXAMPLES_NSH_DISABLE_MB,
-  CONFIG_EXAMPLES_NSH_DISABLE_MEM,      CONFIG_EXAMPLES_NSH_DISABLE_MKDIR,   CONFIG_EXAMPLES_NSH_DISABLE_MKFATFS,
-  CONFIG_EXAMPLES_NSH_DISABLE_MKFIFO,   CONFIG_EXAMPLES_NSH_DISABLE_MKRD,    CONFIG_EXAMPLES_NSH_DISABLE_MH,
-  CONFIG_EXAMPLES_NSH_DISABLE_MOUNT,    CONFIG_EXAMPLES_NSH_DISABLE_MW,      CONFIG_EXAMPLES_NSH_DISABLE_PS,
-  CONFIG_EXAMPLES_NSH_DISABLE_PING,     CONFIG_EXAMPLES_NSH_DISABLE_PUT,     CONFIG_EXAMPLES_NSH_DISABLE_PWD,
-  CONFIG_EXAMPLES_NSH_DISABLE_RM,       CONFIG_EXAMPLES_NSH_DISABLE_RMDIR,   CONFIG_EXAMPLES_NSH_DISABLE_SET,
-  CONFIG_EXAMPLES_NSH_DISABLE_SH,       CONFIG_EXAMPLES_NSH_DISABLE_SLEEP,   CONFIG_EXAMPLES_NSH_DISABLE_TEST,
-  CONFIG_EXAMPLES_NSH_DISABLE_UMOUNT,   CONFIG_EXAMPLES_NSH_DISABLE_UNSET,   CONFIG_EXAMPLES_NSH_DISABLE_USLEEP,
-  CONFIG_EXAMPLES_NSH_DISABLE_XD
+  CONFIG_EXAMPLES_NSH_DISABLE_IFCONFIG, CONFIG_EXAMPLES_NSH_DISABLE_LOSETUP, CONFIG_EXAMPLES_NSH_DISABLE_LS,
+  CONFIG_EXAMPLES_NSH_DISABLE_MB,       CONFIG_EXAMPLES_NSH_DISABLE_MEM,     CONFIG_EXAMPLES_NSH_DISABLE_MKDIR,
+  CONFIG_EXAMPLES_NSH_DISABLE_MKFATFS,  CONFIG_EXAMPLES_NSH_DISABLE_MKFIFO,  CONFIG_EXAMPLES_NSH_DISABLE_MKRD,
+  CONFIG_EXAMPLES_NSH_DISABLE_MH,       CONFIG_EXAMPLES_NSH_DISABLE_MOUNT,   CONFIG_EXAMPLES_NSH_DISABLE_MW,
+  CONFIG_EXAMPLES_NSH_DISABLE_PS,       CONFIG_EXAMPLES_NSH_DISABLE_PING,    CONFIG_EXAMPLES_NSH_DISABLE_PUT,
+  CONFIG_EXAMPLES_NSH_DISABLE_PWD,      CONFIG_EXAMPLES_NSH_DISABLE_RM,      CONFIG_EXAMPLES_NSH_DISABLE_RMDIR,
+  CONFIG_EXAMPLES_NSH_DISABLE_SET,      CONFIG_EXAMPLES_NSH_DISABLE_SH,      CONFIG_EXAMPLES_NSH_DISABLE_SLEEP,
+  CONFIG_EXAMPLES_NSH_DISABLE_TEST,     CONFIG_EXAMPLES_NSH_DISABLE_UMOUNT,  CONFIG_EXAMPLES_NSH_DISABLE_UNSET,
+  CONFIG_EXAMPLES_NSH_DISABLE_USLEEP,   CONFIG_EXAMPLES_NSH_DISABLE_XD
 
 NSH-Specific Configuration Settings
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
